--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -9,7 +9,8 @@
 <ion-content class="home">
   <ion-card>
     <ion-card-header>
-      SMS
+      Number
+      <ion-input [(ngModel)]="recepientNumber"></ion-input>
     </ion-card-header>
     <ion-card-content>
       Body
