--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -10,7 +10,9 @@
   <ion-card>
     <ion-card-header>
       Number
+      <ion-item>
       <ion-input [(ngModel)]="recepientNumber"></ion-input>
+      </ion-item>
     </ion-card-header>
     <ion-card-content>
       Body
